Use mount instead of copy for code

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,4 +9,6 @@ services:
       dockerfile: Dockerfile-http_proxy
       context: .
     working_dir: "/app"
+    volumes:
+      - ./:/app
     command: ["pytest"]
