--- a/Dockerfile-http_proxy
+++ b/Dockerfile-http_proxy
@@ -1,5 +1,5 @@
 FROM python:3.6-alpine
-COPY . /app
+COPY ./Pipfile ./Pipfile.lock /app/
 
 RUN cd /app && apk add gcc g++ make libffi-dev openssl-dev \
     && pip3 install pipenv && pipenv install --system && pip3 install pytest
